--- a/Unit-5/Day-10-Authentication-(Bcrypt-and-JWT)-2/We/.env
+++ b/Unit-5/Day-10-Authentication-(Bcrypt-and-JWT)-2/We/.env
@@ -1,2 +1,5 @@
 # PORT = 3000;
+PORT = 8080
 MONGo_URI =  mongodb://localhost:27017/express;
+JWT_SECRET_KEY1 = "masai"
+JWT_SECRET_KEY2 = "masaischool"
