--- a/Unit-5/Day-12-Full-Stack-CRUD-1/We/package.json
+++ b/Unit-5/Day-12-Full-Stack-CRUD-1/We/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
